test/features/errors/semantic/e1030_invalid_lifetime_on_trait.spl
# E1030: Invalid Lifetime on Trait

Feature: E1030 - Invalid Lifetime Parameter on Trait
  As a Simple compiler
  I want to detect lifetime parameters on traits where not allowed
  So that trait definitions follow lifetime rules

  Background:
    Given I have the Simple compiler

  Scenario: Lifetime parameter on trait (if not supported)
    When I compile:
      '''
      trait Display<'a>:  # Error: lifetime on trait
        fn show(&'a self) -> &'a str
      '''
    Then I should see error E1030 at line 1
    And the error message should be "lifetime parameter not allowed on trait `{trait_name}`"
    And the label should indicate "invalid lifetime parameter"
    And the help should suggest "remove the lifetime parameter from the trait"

  Scenario: Valid trait without lifetimes
    When I compile:
      '''
      trait Display:
        fn show(self) -> str
      '''
    Then compilation should succeed

  Scenario: Lifetime in trait method (may be OK)
    When I compile:
      '''
      trait Processor:
        fn process<'a>(data: &'a str) -> &'a str
      '''
    Then compilation should succeed if method lifetimes allowed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      trait Display<'a>:
        fn show(&'a self) -> str
      '''
    Then I should see error E1030
    And the error message should contain "트레이트에 잘못된 라이프타임"
